tests/typechecker/should_pass/generalised_lets.csp
f(X) = let Y = X within Y

test1 = f(0)
test2 = f(true)
