tests/typechecker/should_fail/type_annotations_7.csp
f :: (Int) -> Int
f(true) = 0
